crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_multiplicative_operators.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a * b / c % d\")"
---
Expr {
    kind: Binary {
        left: Expr {
            kind: Binary {
                left: Expr {
                    kind: Binary {
                        left: Expr {
                            kind: Identifier(
                                "a",
                            ),
                            span: 0..1,
                        },
                        op: Times,
                        right: Expr {
                            kind: Identifier(
                                "b",
                            ),
                            span: 4..5,
                        },
                    },
                    span: 0..5,
                },
                op: Divide,
                right: Expr {
                    kind: Identifier(
                        "c",
                    ),
                    span: 8..9,
                },
            },
            span: 0..9,
        },
        op: Modulo,
        right: Expr {
            kind: Identifier(
                "d",
            ),
            span: 12..13,
        },
    },
    span: 0..13,
}
