crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-5.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"{ \"a\": 1, [b]: 2, 0: \"zero\" }\"#)"
---
Object(
    Object {
        span: 0..29,
        properties: [
            Prop(
                Property {
                    key: String(
                        "a",
                    ),
                    value: Num(
                        Num {
                            span: 7..8,
                            value: "1",
                        },
                    ),
                },
            ),
            Prop(
                Property {
                    key: Computed(
                        Ident(
                            Ident {
                                name: "b",
                                span: 11..12,
                            },
                        ),
                    ),
                    value: Num(
                        Num {
                            span: 15..16,
                            value: "2",
                        },
                    ),
                },
            ),
            Prop(
                Property {
                    key: Number(
                        "0",
                    ),
                    value: Str(
                        Str {
                            span: 21..27,
                            value: "zero",
                        },
                    ),
                },
            ),
        ],
    },
)
