crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-7.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ ...a, ...b, ...c }\")"
---
Object(
    Object {
        span: 0..20,
        properties: [
            Spread(
                Ident(
                    Ident {
                        name: "a",
                        span: 5..6,
                    },
                ),
            ),
            Spread(
                Ident(
                    Ident {
                        name: "b",
                        span: 11..12,
                    },
                ),
            ),
            Spread(
                Ident(
                    Ident {
                        name: "c",
                        span: 17..18,
                    },
                ),
            ),
        ],
    },
)
