crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals-8.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{ a, b }\")"
---
Expr {
    kind: Object {
        properties: [
            Prop(
                Shorthand {
                    key: "a",
                },
            ),
            Prop(
                Shorthand {
                    key: "b",
                },
            ),
        ],
    },
    span: 0..8,
}
