crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_object_literals.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"{}\")"
---
Expr {
    kind: Object {
        properties: [],
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
}
