crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_optional_chaining-2.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a?.[b]\")"
---
Expr {
    kind: OptionalChain {
        base: Expr {
            kind: Index {
                left: Expr {
                    kind: Identifier(
                        "a",
                    ),
                    span: 0..1,
                },
                right: Expr {
                    kind: Identifier(
                        "b",
                    ),
                    span: 4..5,
                },
            },
            span: 0..5,
        },
    },
    span: 0..5,
}
