crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_optional_chaining-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"foo?.()\")"
---
OptionalChain(
    OptionalChain {
        span: 0..7,
        base: Call(
            Call {
                span: 0..7,
                args: [],
                callee: Ident(
                    Ident {
                        name: "foo",
                        span: 0..3,
                    },
                ),
            },
        ),
    },
)
