crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_optional_chaining.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"a?.b?.c\")"
---
Expr {
    kind: OptionalChain(
        OptionalChain {
            base: Expr {
                kind: Member(
                    Member {
                        object: Expr {
                            kind: OptionalChain(
                                OptionalChain {
                                    base: Expr {
                                        kind: Member(
                                            Member {
                                                object: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "a",
                                                            span: 0..1,
                                                        },
                                                    ),
                                                    span: 0..1,
                                                    inferred_type: None,
                                                },
                                                property: Expr {
                                                    kind: Ident(
                                                        Ident {
                                                            name: "b",
                                                            span: 3..4,
                                                        },
                                                    ),
                                                    span: 3..4,
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        span: 0..4,
                                        inferred_type: None,
                                    },
                                },
                            ),
                            span: 0..4,
                            inferred_type: None,
                        },
                        property: Expr {
                            kind: Ident(
                                Ident {
                                    name: "c",
                                    span: 6..7,
                                },
                            ),
                            span: 6..7,
                            inferred_type: None,
                        },
                    },
                ),
                span: 0..7,
                inferred_type: None,
            },
        },
    ),
    span: 0..7,
    inferred_type: None,
}
