crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_parens.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"5 * (x + 1)\")"
---
Expr {
    kind: Binary {
        left: Expr {
            kind: Literal(
                Number(
                    "5",
                ),
            ),
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
        },
        op: Times,
        right: Expr {
            kind: Binary {
                left: Expr {
                    kind: Identifier(
                        "x",
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 6,
                        },
                        end: Position {
                            line: 1,
                            column: 7,
                        },
                    },
                },
                op: Plus,
                right: Expr {
                    kind: Literal(
                        Number(
                            "1",
                        ),
                    ),
                    loc: SourceLocation {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                },
            },
            loc: SourceLocation {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 11,
                },
            },
        },
    },
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
}
